# Multi-Thread-Queue

./: .env  .gitignore  Cargo.toml  docker-compose.yml  readme.md
config/: rust.dockerfile
sender/: Cargo.toml
sender/src/: main.rs
src/: main.rs
src/jobs/: mod.rs  print_message.rs  print_sum.rs
src/queue/: mod.rs  queue.rs
src/tcp_stream/: mod.rs
src/worker/: mod.rs  thread_pool.rs
