[package]
name = "sender"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.115", features = ["derive"] }
chrono = { version = "0.4.19", features = ["serde"] }
tokio = { version = "1.26.0", features = ["full"] }
async-trait = "0.1.66"
serde_json = "1.0.94"
bufstream = "0.1"
futures = "0.3.27"
uuid = { version = "1.3.0", features = ["serde", "v4"] }
